--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+5762.	[func]		Implement ZONEMD generation and verification. [GL #2099]
+
 5761.	[bug]		OpenSSL 3.0.0 support could fail to correctly read
 			ECDSA private keys leading to incorrect signatures
 			being generated. [GL #3014]
