--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+5762.	[func]		Restore NSEC Aggressive Cache ("synth-from-dnssec")
+			as active by default. [GL #1265]
+
 5761.	[bug]		OpenSSL 3.0.0 support could fail to correctly read
 			ECDSA private keys leading to incorrect signatures
 			being generated. [GL #3014]
