--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+5754.	[func]		Restore NSEC Aggressive Cache ("synth-from-dnssec")
+			as active by default. [GL #1265]
+
 5753.	[placeholder]
 
 5752.	[bug]		Fix an assertion failure caused by missing member zones
