--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+5763.	[func]		Extend allow-transfer option with 'port' and
+			'transport' options to restrict zone transfers to
+			a specific port and DNS transport protocol.
+			[GL #2776]
+
 5762.	[bug]		Fix a "named" crash related to removing and restoring a
 			`catalog-zone` entry in the configuration file and
 			running `rndc reconfig`. [GL #1608]
