--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+5764.	[bug]		Fix a bug in DoH implementation making 'dig'
+			abort when ALPN negotiation fails. [GL #3022]
+
 5763.	[bug]		Fix a bug in DoT code leading to an abort when
 			a zone transfer ends with an unexpected DNS message.
 			[GL #3004]
